--- a/app/index.html
+++ b/app/index.html
@@ -253,6 +253,190 @@
                   edit the content and direct the AI in making revisions.</p>
               </div>
             </div>
+            <div class="topic">
+              <h3 class="muted title">2014</h3>
+
+              <div class="section"></div>
+
+              <div class="section"></div>
+
+              <div class="section"></div>
+
+              <div class="section"></div>
+
+              <div class="section"></div>
+
+              <div class="section">Cryptocurrency Price Comparison Dashboard
+                Project Description:
+                Developed a sophisticated Cryptocurrency Price Comparison Dashboard to analyze and visualize bid and ask
+                prices across different exchanges, with a focus on Cryptsy and Bter. The dynamic graph provides a clear
+                representation of market trends, aiding in the identification of potential arbitrage opportunities.
+                Robust error handling, database integration, and a user-friendly interface ensure accessibility for a
+                diverse audience.
+
+                Key Features:
+
+                Intuitive Visualization: The dashboard offers an easy-to-interpret graph of bid and ask prices, enabling
+                effortless market analysis.
+
+                Exchange Comparison: Users can seamlessly compare cryptocurrency prices between different exchanges for
+                comprehensive insights.
+
+                Dynamic Pair Selection: Tailored for user preferences, the dashboard supports the selection of specific
+                cryptocurrency pairs for analysis.
+
+                Error Resilience: Implemented strong error handling and retry logic for API calls, ensuring data
+                reliability.
+
+                Database Integration: Utilized MySQL for secure storage and retrieval of real-time market data,
+                supporting historical tracking.
+
+                Arbitrage Exploration: The project explores the potential for cryptocurrency arbitrage between Cryptsy
+                and Bter, uncovering opportunities for informed decision-making.
+
+                Tools and Technologies:
+
+                PHP: Dynamic server-side scripting for responsive dashboard development.
+
+                cURL: Seamless interaction with Cryptsy and Bter APIs for real-time market data retrieval.
+
+                MySQL: Integrated a secure database solution for efficient data management.
+
+                Highcharts: Implemented for visually appealing and interactive graph displays.
+
+                HTML/CSS/JavaScript: Crafting a user-friendly and responsive web interface for a sophisticated user
+                experience.
+
+                This Cryptocurrency Price Comparison Dashboard serves as a powerful tool for market analysis, providing
+                accessible insights without compromising sophistication. The project underscores a seamless fusion of
+                technological innovation and financial exploration.</div>
+              <div class="section">
+
+                WordPress Plugin: EJM Add Search Form
+                Project Description:
+                The EJM Add Search Form WordPress plugin enhances most WordPress themes by adding a search form,
+                particularly beneficial for themes lacking this feature. Aimed at non-coders and users with a penchant
+                for theme customization, this plugin seamlessly inserts a search form into the specified HTML element,
+                providing an effortless solution for improved search functionality.
+
+                Tools and Technologies Employed:
+
+                WordPress: Developed as a WordPress plugin for seamless integration with various themes.
+
+                PHP: Utilized PHP for server-side scripting, creating dynamic functionalities within the WordPress
+                environment.
+
+                jQuery: Integrated jQuery to ensure the availability of the library and enhance the plugin's
+                responsiveness.
+
+                WordPress Admin Menu: Leveraged the WordPress admin menu for users to easily access and configure plugin
+                settings.
+
+                HTML/CSS/JavaScript: Employed a combination of these technologies for effective frontend and dynamic
+                manipulation of the search form.</div>
+
+              <div class="topic">
+                https://github.com/erikmattheis/gsn-api-client
+                Project Description:
+                The GSN API Client project aimed to facilitate grocery store chains in integrating digital coupons into
+                their marketing websites. Developed for Grocery Store Network, a vendor providing digital coupons to
+                various Midwest chains.
+                Key Features:
+
+                Authentication: Enables authentication with GSN RESTful endpoints using client credentials.
+                Dynamic API Calls: Allows dynamic API calls to GSN endpoints, such as fetching a list of stores.
+                Token Management: Manages access and refresh tokens for secure and authenticated interactions.
+                Efficient Caching: Implements transient caching to enhance performance by storing API responses
+                temporarily.
+                Tools and Technologies:
+
+                PHP: Utilized PHP for server-side scripting and interaction with GSN's RESTful API.
+                WordPress Plugin: Developed as a WordPress plugin for seamless integration with marketing sites.
+                CURL: Leveraged cURL library for making HTTP requests to GSN's API endpoints.
+                JSON: Utilized JSON for data exchange between the plugin and GSN's API.
+              </div>
+
+              <div class="topic">
+                https://github.com/erikmattheis/gsncore
+                GSN core
+
+                Project Description:
+                I worked on a team of three for a digital coupon generation project for GSN (Grocery Shopping Network),
+                which is now defunct. The project involved creating a platform for users to shop for groceries with meal
+                planning solutions, save money using printable coupons, and access recipes and meal ideas.
+
+                Key Features:
+
+                Weekly Specials: Users could explore weekly specials on groceries.
+                Recipes: The platform provided a collection of recipes for users to discover.
+                Coupons: Digital coupons were generated to help users save money.
+                Meal Planning: The system included meal planning solutions.
+                Cooking Videos: Users could access cooking videos for guidance.
+                Low Prices: The platform aimed to offer competitive and affordable prices.
+                Online Shopping: Users had the option to shop for groceries online.
+                Technologies and Tools Used:
+
+                Front-End Framework: AngularJS
+                CSS Framework: Twitter Bootstrap (3.1.1)
+                Coupon Integration: Coupons, Inc. for digital coupon functionality
+                JavaScript Libraries: jQuery, Handlebars.js, qtip2, blueimp Gallery
+                Icons: Font Awesome (4.3.0)
+                Other Tools: Angular Facebook, Angular Recaptcha, Bootstrap Image Gallery
+                Mapping: Google Maps API
+                Analytics: Google Analytics, Twitter Widgets
+                Build Tools: Grunt (not explicitly mentioned but commonly used with AngularJS projects)
+                The project aimed to enhance the grocery shopping experience by combining digital coupons, meal
+                planning, and online shopping features within a user-friendly web application.
+
+
+              </div>
+
+              <div class="topic">
+                Project Description:
+                The gsnbasic project involved creating a generic WordPress starter theme that incorporated GSN's
+                electronic coupon products. The theme, named gsnbasic, was designed to be clean, minimal, and
+                responsive, catering to retailers. It utilized Bootstrap 3 for mobile and tablet friendliness, included
+                a full-screen slider, social icon integration, author bio, popular posts widget, and an improved
+                category widget. The theme adhered to the latest web standards such as HTML5 and CSS3, ensuring SEO
+                friendliness through clean code and structure. It provided numerous theme options for layout, colors,
+                fonts, slider settings, and more. Additionally, gsnbasic was translation and multilingual ready,
+                available in various languages.
+
+                Key Features:
+                1. Bootstrap 3 Integration: Utilized Bootstrap 3 for a responsive design.
+                2. Unlimited Color Variations: Users could customize the theme with unlimited color options.
+                3. SEO Friendly: Clean structure and codebase for search engine optimization.
+                4. Theme Options: Customization options for layout, colors, fonts, and slider settings.
+                5. Image-Centric Approach: Focused on an image-centric design.
+                6. Internationalized & Localization: Translation and multilingual ready, supporting multiple languages.
+                7. Drop-down Menu: Included a drop-down menu for navigation.
+                8. Cross-Browser Compatibility: Ensured compatibility across different web browsers.
+                9. Threaded Comments: Supported threaded comments for discussions.
+                10. Gravatar Ready: Integrated Gravatar for user avatars.
+                11. Featured Slider: Featured slider for showcasing important content.
+                12. Font Awesome Icons: Used Font Awesome icons for enhanced visuals.
+
+                Technologies and Tools Used:
+                1. WordPress: Used as a Git submodule in `/htdocs/`.
+                2. Bootstrap 3: Integrated for a responsive design.
+                3. FontAwesome: Used for the integration of Font Awesome icons.
+                4. WP-Bootstrap-NavWalker: Utilized for navigation menu functionality.
+                5. Options Framework by WP Theming: Provided a framework for theme options.
+                6. FlexSlider by WooThemes: Integrated for the featured slider.
+                7. HTML5 and CSS3: Implemented the latest web standards for a modern design.
+                8. Git: Version control for managing the project.
+                9. Deployment: Included deployment instructions for setting up and updating the theme.
+
+
+              </div>
+
+              [Briefly describe the project in a concise and efficient manner.]
+
+              [and list key features]
+
+              [and list technologies and tools used]
+
+            </div>
           </div>
         </div>
 
