--- a/app/index.html
+++ b/app/index.html
@@ -392,6 +392,7 @@
               </div>
 
               <div class="topic">
+                https://github.com/erikmattheis/wp-skeleton/tree/master/content/themes/gsn-theme-basic
                 Project Description:
                 The gsnbasic project involved creating a generic WordPress starter theme that incorporated GSN's
                 electronic coupon products. The theme, named gsnbasic, was designed to be clean, minimal, and
@@ -430,11 +431,271 @@
 
               </div>
 
+              <div class="topic">
+
+                https://github.com/erikmattheis/ds-foundation
+
+                Project Description:
+                The ds-cdn project facilitated GSN clients using the Foundation CSS Framework in seamlessly
+                incorporating GSN's digital products into their websites.
+
+                Key Features:
+                1. **Proxy Server:** Included a proxy server to handle requests to 'http://clientapix.gsn2.com/api/v1'
+                and streamline communication.
+                2. **Static File Access:** Ensured static file access for asset folders.
+                3. **HTML Rendering:** Rendered HTML content for various paths, handling customization based on chainId.
+                4. **Dynamic Port Allocation:** Dynamically allocated ports based on the provided chainId for multiple
+                instances.
+                5. **AngularJS Module:** Utilized an AngularJS module named 'storeApp' for enhanced client-side
+                functionality.
+                6. **Route Configuration:** Configured routes for different paths, each associated with a specific
+                template URL.
+                7. **Template Engine:** Used EJS (Embedded JavaScript) as a template engine for rendering HTML files.
+                8. **Server Start-Up:** Initiated Express servers for each chainId, each on a different port.
+                9. **Captcha Integration:** Included captcha functionality for form submissions, enhancing security.
+                10. **Email Templating:** Utilized email templates for contact form submissions, providing a structured
+                email message.
+                11. **Client-Side Configurations:** Adjusted client-side configurations, including disabling the theme
+                and setting default mobile list view.
+
+                Technologies and Tools Used:
+                1. **Node.js:** Platform used for server-side JavaScript execution.
+                2. **Express:** Web application framework for Node.js, used for building the proxy server and serving
+                HTML files.
+                3. **AngularJS:** JavaScript-based front-end framework, employed for building the 'storeApp' module and
+                configuring routes.
+                4. **Gulp:** Task runner used for automating tasks like testing and building.
+                5. **EJS (Embedded JavaScript):** Template engine utilized for rendering HTML content.
+                6. **Git:** Version control system used for managing the project.
+                7. **Bootstrap:** Front-end framework employed for responsive design.
+                8. **jQuery:** JavaScript library used for simplifying client-side scripting.
+                9. **Body-Parser:** Middleware for handling HTTP POST requests.
+                10. **Method-Override:** Middleware for HTTP method override support.
+                11. **Request:** Simplified HTTP request client.
+                12. **File System (fs):** Module in Node.js used for handling file-related operations.
+                13. **URL Module:** Module in Node.js used for parsing and formatting URLs.
+                14. **HTTP Module:** Module in Node.js used for creating HTTP servers.
+
+                The ds-cdn project aimed to streamline the integration of GSN's digital products into websites using the
+                Foundation CSS Framework, providing clients with an efficient solution for incorporating GSN
+                functionalities.
+
+
+              </div>
+
+              <div class="topic">
+
+                https://github.com/erikmattheis/OpeningRangeBot/
+
+                **Project Overview:**
+                The project is an options trading bot named "OpeningRangeBot," developed for learning purposes using
+                Node.js. It facilitates automated options trading based on specified strategies.
+
+                **Key Features:**
+                1. **Automated Trading:** Executes trading strategies for options based on market conditions.
+                2. **Simulation Mode:** Supports simulation of trades without actual market involvement.
+                3. **Dynamic Configuration:** Configurable parameters for risk factors, opening minutes, and strategy
+                requirements.
+                4. **Cron Job Scheduling:** Utilizes Cron jobs to initiate and stop trading at specified times.
+                5. **Data Streaming:** Integrates real-time data streaming from TradeKing and simulation data from
+                files.
+                6. **MongoDB Integration:** Stores trading data in MongoDB for analysis and tracking.
+                7. **Web Interface:** Includes a web interface for user interaction and data visualization.
+
+                **Technologies and Tools:**
+                - **Node.js:** Core platform for server-side JavaScript.
+                - **Express:** Web framework for building the server.
+                - **MongoDB:** Database for storing trading data.
+                - **Cron:** Job scheduler for time-based task automation.
+                - **OAuth:** Authentication protocol for secure API access.
+                - **Mocha and Chai:** Testing frameworks for ensuring code reliability.
+                - **Bootstrap:** Front-end framework for web interface design.
+                - **AngularJS:** JavaScript framework for dynamic web applications.
+                - **Highstock:** JavaScript library for interactive financial charts.
+
+                The project demonstrates proficiency in Node.js, asynchronous programming, data streaming, and
+                integrates various tools to create a functional options trading bot.
+
+              </div>
+
+              <div class="topic">
+                https://github.com/erikmattheis/MoveDocumentsToS3
+                **Project Overview:**
+                The project, named "mongodb_s3_backup," is a custom tool designed to facilitate the backup of MongoDB
+                databases to Amazon S3 when transferring a project from shared hosting to AWS Cloud. It addresses the
+                specific requirements of the migration process.
+
+                **Key Features:**
+                1. **MongoDB Backup:** Enables seamless backup of MongoDB databases to ensure data integrity during
+                migration.
+                2. **Amazon S3 Integration:** Utilizes Amazon S3 for secure and scalable storage of MongoDB backup
+                files.
+                3. **Synchronization:** Ensures synchronization between MongoDB and S3, guaranteeing that the latest
+                data is backed up.
+                4. **Automated Removal:** Provides functionality to remove specified MongoDB collections after
+                successful backup.
+                5. **Query Configuration:** Allows customization of MongoDB queries for data selection based on specific
+                criteria.
+                6. **Logging:** Implements a logging mechanism to record backup and removal activities.
+                7. **Graceful Exit:** Ensures a graceful exit from the process after completing backup and collection
+                removal.
+
+                **Technologies and Tools:**
+                - **Node.js:** Core platform for server-side JavaScript.
+                - **MongoDB (mongoose):** Database for storing and retrieving data.
+                - **Amazon S3:** Cloud storage service for scalable and durable backup storage.
+                - **node-mongodb-s3-backup:** External library for MongoDB to S3 backup functionality.
+                - **MongoClient:** MongoDB driver for Node.js to interact with MongoDB.
+                - **config.json:** Configuration file for specifying MongoDB and S3 settings.
+                - **Logger (logger.js):** Logging module for recording backup and removal activities.
+
+                This project showcases the ability to create a tailored solution for a specific migration scenario,
+                integrating MongoDB, Amazon S3, and Node.js for an efficient backup process. The custom tool enhances
+                the data management aspect of transitioning from shared hosting to AWS Cloud.
+
+              </div>
+
+              <div class="topic">
+                **Project Overview:**
+                The "vue-first-app" project, named "slotmachine," is a full-featured one-arm bandit developed to explore
+                the differences between Vue 2 and Vue 3. The slot machine incorporates symbols inspired by iconic
+                figures like Prince, David Bowie, Lady Gaga, birds, and selected food items, making it a visually
+                engaging application.
+
+                **Key Features:**
+                1. **Symbol Diversity:** Offers a wide range of symbols including Prince, David Bowie, Lady Gaga, birds,
+                and food items for a rich and varied visual experience.
+                2. **Credit System:** Implements a credit system allowing users to spin the slot machine with a starting
+                credit balance.
+                3. **Reel Animation:** Features animated reels with diverse symbols, enhancing the slot machine
+                experience.
+                4. **Audio Integration:** Incorporates sound effects for button clicks, spinning, and winning
+                combinations, enhancing the overall user experience.
+                5. **Responsive Design:** Adopts a responsive design approach for optimal viewing on different devices.
+                6. **Free Spin Feature:** Introduces a "Free Spin" feature for specific symbol combinations.
+                7. **Credit Meter:** Displays a credit meter to keep users informed about their remaining credits.
+                8. **Vue 3 Components:** Demonstrates the use of Vue 3 components, including TheSplash,
+                TheBirdhouseAnimation, TheGame, TheCreditMeter, TheReels, ThreeDButton, and TheAudioButton.
+
+                **Technologies and Tools:**
+                - **Vue 3:** JavaScript framework for building user interfaces.
+                - **Vuex:** State management library for Vue.js applications.
+                - **Core-js:** JavaScript standard library, providing essential polyfills.
+                - **Vue CLI:** Command-line interface for Vue.js development tasks.
+                - **Babel:** JavaScript compiler for transforming code.
+                - **ESLint:** Linting utility for identifying and fixing code errors.
+                - **Google Fonts:** Integration of "Overpass Mono" font for enhanced typography.
+                - **Audio Files:** Various audio files for sound effects during gameplay.
+
+                This project serves as a creative exploration of Vue.js capabilities, showcasing the development of an
+                interactive and visually appealing slot machine application with distinctive symbols and engaging
+                features. The use of Vue 3 and associated tools highlights the evolution of Vue.js in building modern
+                web applications.
+              </div>
+
+              <div class="topic">
+                **Project Overview:**
+                The "articl-frontend-dev" project is an application designed to provide medical students with
+                multiple-choice quizzes for studying purposes. Developed during the mentorship of UMN-Duluth CS majors,
+                the project aims to expose students to real-world scenarios, encouraging the understanding and
+                adaptation of code for educational purposes.
+
+                **Key Features:**
+                1. **Study Quizzes:** Facilitates the creation and delivery of multiple-choice quizzes for medical
+                students.
+                2. **User Authentication:** Implements user authentication functionalities, including registration,
+                login, and account verification.
+                3. **Category Organization:** Allows the categorization of quizzes based on medical topics for easy
+                navigation.
+                4. **User Profile:** Provides user profiles with information about their progress and contributions.
+                5. **Responsive Design:** Adopts a responsive design approach for optimal user experience on various
+                devices.
+                6. **Password Management:** Includes features for password reset and email verification.
+                7. **User Management:** Enables administrators to manage user accounts and access control.
+
+                **Technologies and Tools:**
+                - **Vue 3:** JavaScript framework for building user interfaces.
+                - **Vue Router:** Provides navigation management for the Vue.js application.
+                - **Vuex:** State management library for Vue.js applications.
+                - **Axios:** HTTP client for making requests to the server.
+                - **Express:** Web application framework for Node.js, used for server-side development.
+                - **Feather Icons:** Collection of simply beautiful open-source icons.
+                - **Lodash:** JavaScript utility library for simplifying complex operations.
+                - **Sass-rem:** Plugin for using rem units in Sass.
+                - **V3 Infinite Loading:** Vue.js plugin for infinite scrolling.
+                - **Vue Cookies:** Library for handling cookies in Vue.js applications.
+                - **Vue Feather:** Vue component for Feather icons.
+                - **Vue Draggable:** Vue directive for drag-and-drop functionality.
+                - **Core-js:** JavaScript standard library, providing essential polyfills.
+                - **ESLint:** Linting utility for identifying and fixing code errors.
+                - **Babel:** JavaScript compiler for transforming code.
+                - **Express Middleware:** Used for serving static files and enhancing server functionality.
+                - **TypeScript:** Superset of JavaScript that adds static typing for enhanced code reliability.
+
+                This project serves as an educational tool for medical students, offering a platform for interactive and
+                organized study quizzes. The use of Vue.js and associated tools showcases the development of a
+                user-friendly and feature-rich application, emphasizing both frontend and backend aspects for a
+                comprehensive learning experience.
+              </div>
+
+              <div class="topic">
+
+                https://github.com/erikmattheis/greatclipsadwordstool
+                **Project Overview:**
+                The Google AD Campaign Generator for GreatClips franchise owners is an application designed to
+                streamline the creation and management of Google Ads campaigns for new GreatClips franchise owners with
+                multiple franchises in a specific geographical area. The primary functionality involves dynamically
+                generating ads for the closest GreatClips franchise based on user-triggered Google searches.
+
+                **Key Features:**
+                1. **Dynamic Ad Generation:** Automatically generates Google Ads for the closest GreatClips franchise in
+                response to user-initiated Google searches.
+                2. **Budget Management:** Utilizes budget management functionalities to allocate resources effectively
+                for advertising campaigns.
+                3. **Campaign Configuration:** Configures Google Ads campaigns based on the specific requirements of
+                GreatClips franchise owners.
+                4. **Ad Group Customization:** Creates ad groups with tailored settings to optimize the targeting and
+                delivery of advertisements.
+                5. **Keyword Integration:** Incorporates relevant keywords to enhance the visibility of ads in response
+                to user search queries.
+                6. **Proximity Targeting:** Implements proximity targeting to ensure that ads are displayed based on the
+                user's geographical location.
+                7. **Error Handling:** Includes error handling mechanisms to identify and address potential issues
+                during the campaign creation process.
+
+                **Technologies and Tools:**
+                - **Express.js:** Web application framework for Node.js, used to create a server for handling HTTP
+                requests.
+                - **Node.js:** JavaScript runtime for executing server-side code.
+                - **node-adwords Library:** Node.js client library for interacting with the Google Ads API, facilitating
+                the creation and management of advertising campaigns.
+                - **xml2js Library:** Converts XML data to JSON format, aiding in processing and handling data retrieved
+                from the Google Ads API.
+                - **async Library:** Manages asynchronous operations in a waterfall pattern, ensuring a sequential flow
+                of tasks during the campaign creation process.
+                - **BudgetHelper Module:** Custom module for handling budget-related functionalities.
+                - **CampaignHelper Module:** Custom module for managing campaign-related functionalities.
+                - **AdGroupHelper Module:** Custom module for handling ad group-related functionalities.
+                - **ProximityHelper Module:** Custom module for setting up proximity targeting in campaigns.
+                - **KeywordsHelper Module:** Custom module for managing keywords in ad groups.
+
+                This application simplifies the process of setting up and managing Google Ads campaigns for GreatClips
+                franchise owners, enhancing the visibility and reach of their franchises in response to user searches.
+                The utilization of the Google Ads API and Node.js technologies ensures efficient campaign creation and
+                customization for optimal advertising outcomes.
+              </div>
+
               [Briefly describe the project in a concise and efficient manner.]
 
               [and list key features]
 
               [and list technologies and tools used]
+
+            </div>
+
+            <div class="topic">
+
+              Custom Shopify Theme
 
             </div>
           </div>
